<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:minWidth="500dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.baclpt.spotifystreamer.PlayerActivityFragment">

    <TextView
        android:id="@+id/player_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/player_labels_padding" />

    <TextView
        android:id="@+id/player_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/player_labels_padding" />

    <ImageView
        android:id="@+id/player_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/player_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/player_labels_padding" />

    <SeekBar
        android:id="@+id/player_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_track_time_past"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/player_track_time_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/player_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_label_previous"
            android:padding="@dimen/player_button_padding"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/player_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/player_button_padding"
            android:layout_marginRight="@dimen/player_button_padding"
            android:contentDescription="@string/button_label_play"
            android:padding="@dimen/player_button_padding"
            android:src="@android:drawable/ic_media_play"

            />

        <ImageButton
            android:id="@+id/player_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_label_next"
            android:padding="@dimen/player_button_padding"
            android:src="@android:drawable/ic_media_next" />
    </LinearLayout>

</LinearLayout>
